[package]
name = "supports-color"
version = "1.0.2"
authors = ["Kat Marchán <kzm@zkat.tech>"]
description = "Detects whether a terminal supports color, and gives details about that support."
categories = ["terminal"]
repository = "https://github.com/zkat/supports-color"
documentation = "https://docs.rs/supports-color"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
ci_info = "0.14.2"
lazy_static = "1.4.0"
regex = "1.5.4"
